# nlp_course

./: setup.cfg
components/front_end/: setup.cfg  setup.py  static.py
components/main_topics/: setup.cfg
components/main_topics/adapters/: dto.py  settings.py  telegram_connector.py
components/main_topics/applications/: service.py  services.py
components/main_topics/composites/: main_topics_api.py
deployment/: entrypoint_api.sh
exploration/: train_nn.py
exploration/1_base/: base.ipynb
