[metadata]
name = Tg channel main topics UI
version = 0.0.1
description = Tools for definition main keywords for the last days in tg channels
author = Andrey Kosintsev
author_email = andreykosintsev1@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = >=3.7.0

install_requires =
    pandas~=1.3.5
    dash~=2.8.1
    dash-bootstrap-components~=1.4.0

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0
    toml~=0.10.2
    flake8~=5.0.4
    Flake8-pyproject~=1.1.0